v2.6.0
----------------------------------------------------------------------------------------------------
 * Added ACME ARI support (rfc9773) to the module. Enabled by default. New
   directive "MDRenewViaARI on|off" for controlling this. Documentation in
   README.md
 * Removing tailscale support. It has not been working for a long time
   as the company decided to change their APIs. Away with the dead code,
   documentation and tests.

v2.5.3
----------------------------------------------------------------------------------------------------
 * Fixed a compilation issue with pre-industrial versions of libcurl.

v2.5.2
----------------------------------------------------------------------------------------------------
 * Fixed TLS-ALPN-01 challenges when multiple `MDPrivateKeys` are specified
   with EC keys before RSA ones. Fixes #377.
 * Fixed missing newlines in the status page output. [andreasgroth]

v2.5.1
----------------------------------------------------------------------------------------------------
 * When installing a custom CA file via `MDCACertificateFile`, also set the
   libcurl option CURLSSLOPT_NO_REVOKE that suppresses complains by Schannel
   (when curl is linked with it) about missing CRL/OCSP in certificates.
   Fixes #361.
 * Fixed handling of corrupted httpd.json and added test 300_30 for it.
   File is removed on error and written again. Fixes #369.
 * Added explanation in log for how to proceed when md_store.json could not be
   parsed and prevented the server start.

v2.5.0
----------------------------------------------------------------------------------------------------
 * Added support for ACME profiles. See README on how to use them.
 * restored fixed to #336 and #337 which got lost in a sync with Apache svn
 * Add Issue Name/Uris to certificate information in md-status handler
 * MDomains with static certificate files have MDRenewMode "manual", unless
   "always" is configured.

v2.4.31